--- a/index.html
+++ b/index.html
@@ -3,79 +3,105 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Crystal ALGO Signal</title>
+  <title>ALGO Signal</title>
   <style>
-    body {
-      background: url('IMG_8790.jpg') no-repeat center center fixed;
-      background-size: cover;
+    html, body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
+      padding: 0;
+      height: 100%;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
-      color: #fff;
+      flex-direction: column;
+      color: white;
     }
+
+    video.bg-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      min-width: 100%;
+      min-height: 100%;
+      z-index: -1;
+      object-fit: cover;
+    }
+
     #grid {
       display: grid;
       grid-template-columns: repeat(5, 60px);
       grid-gap: 10px;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
+
     .cell {
       width: 60px;
       height: 60px;
       background-image: url('IMG_8797.jpeg');
       background-size: cover;
       border-radius: 10px;
-      position: relative;
       transition: transform 0.3s ease;
     }
+
     .star {
       background-image: url('star.png');
       background-size: cover;
       animation: pulseStar 0.5s ease;
     }
+
     .explode {
       animation: explode 0.4s forwards;
     }
+
     @keyframes explode {
       0% { transform: scale(1); opacity: 1; }
       50% { transform: scale(1.3) rotate(10deg); opacity: 0.5; }
       100% { transform: scale(0); opacity: 0; }
     }
+
     @keyframes pulseStar {
       0% { transform: scale(0); opacity: 0; }
       60% { transform: scale(1.2); opacity: 1; }
       100% { transform: scale(1); }
     }
+
     #control {
       display: flex;
       align-items: center;
       justify-content: center;
-      margin: 15px 0;
+      margin: 10px 0;
     }
+
     .ctrl-btn {
-      font-size: 26px;
+      font-size: 24px;
       background: none;
       border: none;
       color: #0ff;
       margin: 0 20px;
       cursor: pointer;
     }
+
     #getSignal {
-      padding: 12px 30px;
+      padding: 10px 25px;
       background-color: #00eaff;
       color: #000;
-      font-size: 18px;
-      border-radius: 10px;
+      font-size: 16px;
+      border-radius: 8px;
       cursor: pointer;
       box-shadow: 0 0 15px #0ff;
     }
   </style>
 </head>
 <body>
+
+  <video class="bg-video" autoplay muted loop>
+    <source src="bg_loop_final.mp4" type="video/mp4">
+  </video>
+
   <h2>Gaming Season</h2>
   <div id="grid"></div>
   <div id="control">
@@ -95,7 +121,6 @@
       for (let i = 0; i < 25; i++) {
         const cell = document.createElement("div");
         cell.classList.add("cell");
-        cell.dataset.index = i;
         grid.appendChild(cell);
       }
     }
